[project]
name = "keyring-proxy-env"
version = "0.2.12.6"
description = "Default template for PDM package"
authors = [
    {name = "Kalle M. Aagaard", email = "git@k-moeller.dk"},
]
dependencies = [
    "keyring>=25.6.0",
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/KalleDK/py-keyring-proxy-env"

[project.entry-points."keyring.backends"]
EnvProxyBackend = "keyring_proxy_env:EnvProxyBackend"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
tools = [
    "pyright>=1.1.392.post0",
    "ruff>=0.9.3",
]




